[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "promptpack-ai"
version = "0.1.0"
description = "Turn any codebase into an AI-ready prompt context pack."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Asim Awdah"}]
keywords = ["ai", "prompt", "developer-tools", "cli", "codebase", "context"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development",
]

[project.scripts]
promptpack = "promptpack.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["promptpack*"]
